# agentpassport

./: .coderabbit.yaml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
cli/: index.html
concepts/: index.html
demo/: README.md  binding_demo.py  datadog_agent.py  lark_agent.py  orchestrator.py  run_demo.py
demo/ts_agent/: package-lock.json  package.json  server.js
docs/: CNAME  README.md  cli.md  concepts.md  index.md
docs/guides/: a2a.md  budget-tracking.md  cross-sdk.md  mcp.md  observability.md  ownership-binding.md  python-quickstart.md  typescript-quickstart.md
docs/python/: adapters.md  api-reference.md  registry.md
docs/stylesheets/: extra.css
docs/typescript/: api-reference.md
guides/a2a/: index.html
guides/budget-tracking/: index.html
guides/cross-sdk/: index.html
guides/mcp/: index.html
guides/observability/: index.html
guides/ownership-binding/: index.html
guides/python-quickstart/: index.html
guides/typescript-quickstart/: index.html
python/adapters/: index.html
python/api-reference/: index.html
python/registry/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_e2e.py
tests/adapters/: test_a2a.py  test_cli_adapter.py  test_mcp_adapter.py  test_rest_adapter.py
(+35 files in other folders)
