[project]
name = "agent-protocol-stack"
version = "0.1.0"
description = "APS: Open protocol for AI agent-to-agent task delegation"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "starlette>=0.37"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
